docs/1.3/05-FAQ/04-Other.md
---
alias: reob2ohph7
description: Frequently asked questions about Prisma as a company, the platform itself and other topics.
---

# Other

### Where can I ask more questions?

You can contact us through a variety of channels.

If you have a **technical problem**, the best way to find help is either in our [Forum](https://www.graph.cool/forum/) or on [Stack Overflow](https://stackoverflow.com/questions/tagged/graphcool).

To **get involved in our open source work** and **obtain insights into our roadmap**, you should check out our [GitHub organization](github.com/graphcool/).

If you just want to hang out and chat with GraphQL enthusiasts, our [Slack](https://slack.graph.cool) channel is the place to be.

Finally, for any direct requests, you can always reach out to us via email: [Sales](mailto:sales@graph.cool) & [Support](mailto:support@graph.cool).

### How is this different from Graphcool Framework?

The Graphcool Framework is a strongly opinionated open-source solution based on GraphQL and Serverless functions, that provides an entire web server setup with a powerful GraphQL API.

Prisma is the result of many learnings and a lot of feedback from customers and the community, that focuses on the core of Graphcool Framework: the automatic mapping from your database to a GraphQL API. This enables you to take full control of your GraphQL server while still being able to benefit from an auto-generated and powerful GraphQL API.

If you have further questions about how the Graphcool Framework and Prisma compare, check out [this](https://www.graph.cool/forum/t/graphcool-framework-and-prisma/2237?u=nilan) forum post.
